[package]
name = "tendermintx"
version = "0.1.0"
edition = "2021"

[lib]
path = "circuits/lib.rs"

[[bin]]
name = "step"
path = "bin/step.rs"

[[bin]]
name = "skip"
path = "bin/skip.rs"

[[bin]]
name = "tendermintx"
path = "bin/tendermintx.rs"

[features]
ci = []

[dependencies]
alloy-sol-types = "0.4.2"
anyhow = "1.0.71"
async-trait = "0.1.73"
clap = { version = "4.3.18", features = ["derive"] }
digest = "0.10.7"
dotenv = "0.15.0"
ed25519-consensus = "2.1.0"
env_logger = "0.10.0"
ethers = "2.0.9"
itertools = "0.11.0"
log = "0.4.19"
num = "0.4.1"
plonky2 = { git = "https://github.com/mir-protocol/plonky2.git" }
plonky2x = { git = "https://github.com/succinctlabs/succinctx.git" }
succinct-client = { git = "https://github.com/succinctlabs/succinctx.git" }
rand = "0.8.5"
reqwest = "0.11.18"
serde = "1.0.175"
serde_json = "1.0.103"
sha2 = "0.10.7"
subtle-encoding = "0.5.1"
tendermint = "0.33.0"
tendermint-proto = "0.33.0"
tokio = { version = "1.29.1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
alloy-primitives = "0.4.2"
